--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,10 @@
 include_directories(${MPR_INCLUDES})
 add_executable(Example1 example1.cpp)
+set(all_libs
+    ${OPENGL_LIBRARY}
+    glfw
+    ${GLFW_LIBRARIES}
+    )
 target_link_libraries(Example1 MPR)
+target_link_libraries(Example1 ${all_libs})
 
