--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${MPR_INCLUDES})
+include_directories(${Boost_INCLUDE_DIRS})
 add_executable(Example1 example1.cpp)
 set(all_libs
     ${OPENGL_LIBRARY}
