--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "external/glfw"]
 	path = external/glfw
-	url = git@github.com:glfw/glfw
+    #url = git@github.com:glfw/glfw
+    url = https://github.com/glfw/glfw
