--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,29 @@ find_package(Boost REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(Git REQUIRED)
 find_package(GLEW REQUIRED)
+FIND_PATH(
+CIMG_INCLUDE_DIR CImg.h
+/usr/lib/CImg
+/usr/local/lib/CImg
+/opt/local/lib/CImg
+"${CMAKE_CURRENT_SOURCE_DIR}/CImg"
+)
 
+message(INFO, ${CIMG_INCLUDE_DIR})
+SET(CIMG_FOUND FALSE)
+ IF(CIMG_INCLUDE_DIR)
+ SET(CIMG_FOUND TRUE)
+ INCLUDE_DIRECTORIES(${CIMG_INCLUDE_DIR})
+ELSE(CIMG_INCLUDE_DIR)
+ MESSAGE(FATAL ERROR "CImg.h not found - Please install CImg")
+ENDIF(CIMG_INCLUDE_DIR)
 
 add_subdirectory(${MPR_SOURCE_DIR}/external/glfw)
 add_subdirectory(${MPR_SOURCE_DIR}/external/gtest)
 add_subdirectory(${MPR_SOURCE_DIR}/external/glm)
 include_directories(${MPR_SOURCE_DIR}/external/glfw/include)
 include_directories(${GLM_INCLUDE_DIR})
+#include_directories(${IL_INCLUDE_DIR})
 
 add_subdirectory(src)
 add_subdirectory(examples)
